--- a/dev/tasks/aws-cli/serviceaccount-aws-cli.yaml
+++ b/dev/tasks/aws-cli/serviceaccount-aws-cli.yaml
@@ -3,5 +3,5 @@ kind: ServiceAccount
 metadata:
   name: aws-cli
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::368491468322:role/myroletest-role
+    eks.amazonaws.com/role-arn: arn:aws:iam::<ACCOUNT_ID>:role/<IAM_ROLE_NAME>
   
