--- a/dev/tasks/helm/docker/Dockerfile
+++ b/dev/tasks/helm/docker/Dockerfile
@@ -1,14 +1,13 @@
 # Download Stage
 FROM fedora:34 as stage
 
-
 ARG VERSION
 ENV URL=https://get.helm.sh/helm-v${VERSION}-linux-amd64.tar.gz
 
 WORKDIR /workspace
 
-
 RUN curl -Ls ${URL} | tar xvzf -
+
 
 
 
@@ -18,15 +17,14 @@ FROM  alpine:3
 
 LABEL maintainer="Antonio Tolentino - atcjunior@gmail.com"
 
-RUN addgroup -g 65532 -S helm; adduser -u 65532 -S helm -G helm
-
 WORKDIR /
 
-ADD --chown=65532:65532 helm-entrypoint.sh /
-COPY --chown=65532:65532 --from=stage /workspace/linux-amd64/helm /usr/local/bin/helm
+RUN addgroup -g 65532 -S helm; adduser -u 65532 -S helm -G helm
 
+ADD --chown=helm:helm helm-entrypoint.sh /
+
+COPY --from=stage /workspace/linux-amd64/helm /usr/local/bin/helm
 
 USER helm:helm
-
 
 ENTRYPOINT ["/helm-entrypoint.sh"]
