--- a/dev/tasks/kaniko/aws/kaniko.yaml
+++ b/dev/tasks/kaniko/aws/kaniko.yaml
@@ -38,6 +38,12 @@ spec:
   #- name: aws_secret
   #  description: AWS secret with AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY
 
+  results:
+    - name: IMAGE_DIGEST
+      description: Image digest.
+    - name: IMAGE_URL
+      description: Image Url.
+
   workspaces:
   - name: source
     description: Context directory containing Dockerfile and other assets to build image
@@ -58,6 +64,7 @@ spec:
     - --cache
     - --cache-dir=/cache
     - --verbosity=$(params.verbosity)
+    - --digest-file=$(results.IMAGE_DIGEST.path)
     - $(params.extra_args[*])
     securityContext:
       runAsUser: 0
@@ -67,6 +74,12 @@ spec:
       # Java Maven m2 cache  
       #- name: m2-cache
       #  mountPath: /root/.m2
+
+  - name: emmit-result-image-url
+    image: bash:latest
+    script: |
+      #!/usr/bin/env bash
+      echo -n "$(params.image_repo):$(params.image_tag)"|tee $(results.IMAGE_URL.path)      
 
   volumes:
   - name: kaniko-image-cache
