--- a/dev/tasks/security/gitleaks/gitleaks-scan.yaml
+++ b/dev/tasks/security/gitleaks/gitleaks-scan.yaml
@@ -3,18 +3,18 @@ kind: Task
 metadata:
   name: gitleaks
   labels:
-    app.kubernetes.io/version: "0.1"
+    app.kubernetes.io/version: "0.2"
   annotations:
     tekton.dev/pipelines.minVersion: "0.28.0"
     tekton.dev/categories: Security Tools
     tekton.dev/tags: security-tool
-    tekton.dev/displayName: "Code forgotten secrets scan"
+    tekton.dev/displayName: "Scan for code forgotten secrets"
 spec:
   description: |
-    This task scan source code for secrets leak
+    This task scan source code for secrets leaks
   steps:
   - name: scan
-    image: zricethezav/gitleaks:v8.0.0
+    image: zricethezav/gitleaks:v8.10.2
     workingDir: $(workspaces.source.path)
     script: |
       gitleaks detect --source="$(workspaces.source.path)" -v
