--- a/dev/tasks/notification/email/docker/Dockerfile
+++ b/dev/tasks/notification/email/docker/Dockerfile
@@ -4,7 +4,7 @@ FROM  fedora:34
 LABEL maintainer="Antonio Tolentino - atcjunior@gmail.com"
 
 ADD --chown=65532:65532 sendmail-entrypoint.sh /sendmail/
-ADD --chown=65532:65532 *_template.html /sendmail/
+ADD --chown=65532:65532 *email_template.html /sendmail/
 
 RUN groupadd -g 65532 sendmail && \
     useradd -m -u 65532 -g sendmail sendmail && \
