--- a/dev/pipeline/pipeline-slack-notification.yaml
+++ b/dev/pipeline/pipeline-slack-notification.yaml
@@ -35,8 +35,6 @@ spec:
     description: Image tag.
   - name: enable_notifications
     description: Slack notifications should be enabled? ("true"|"false").
-  - name: channel
-    description: Slack Channel.
   - name: git_repo
     description: Git repository full name.
   - name: git_branch
@@ -97,12 +95,10 @@ spec:
     - name: image_tag
       value: $(params.image_tag)
     - name: dockerconfig_secret
-      value: dockerconfig      
+      value: dockerconfig
     workspaces:
     - name: source
       workspace: code-ws
-    - name: dockerconfig
-      workspace: dockerconfig
 
   - name: image-scan
     runAfter:
@@ -114,8 +110,8 @@ spec:
       value: $(params.image_repo)
     - name: image_tag
       value: $(params.image_tag)
-    - name: snyk_token_secret
-      value: snyk-token
+    - name: snyk_secret
+      value: snyk
     workspaces:
     - name: source
       workspace: code-ws
@@ -180,8 +176,6 @@ spec:
           value: $(context.pipelineRun.name)  
         - name: namespace
           value: $(params.namespace)
-        - name: channel
-          value: $(params.channel)          
         - name: slack_secret
           value: slack
       when:
@@ -212,8 +206,6 @@ spec:
           value: $(context.pipelineRun.name)
         - name: namespace
           value: $(params.namespace)
-        - name: channel
-          value: $(params.channel)          
         - name: slack_secret
           value: slack          
       when:
@@ -230,7 +222,5 @@ spec:
   workspaces:
   - name: github-ssh
   - name: code-ws
-  - name: dockerconfig
-  - name: slack-credential
 
   
