--- a/dev/tasks/notification/slack/slack.yaml
+++ b/dev/tasks/notification/slack/slack.yaml
@@ -15,43 +15,48 @@ spec:
   params:
     - name: git_repo
       description: Git repository full name.
+    - name: git_branch
+      description: Git branch.         
     - name: git_commit
       description: Git commit.
-    - name: git_branch
-      description: Git branch.
     - name: pusher_name
       description: Git pusher's name.
     - name: pusher_email
       description: Git pusher's email.
+    - name: pipelinerun_name
+      description: PipelineRun name.      
     - name: pipelinerun_status
       description: PipelineRun status.
-    - name: pipelinerun_name
-      description: PipelineRun name.
     - name: namespace
       description: Application namespace.
+    - name: send_type
+      description: "Notifications send type"
+      default: "SLACK"
     - name: slack_secret
       description: Slack token secret.
 
   steps:
   - name: send-message
-    image: docker.io/kubeideas/slack:v0.4.0
+    image: docker.io/kubeideas/tekton-notifications:v0.1.0
     env:
       - name: "GIT_REPO"
         value: $(params.git_repo)
+      - name: "GIT_BRANCH"
+        value: $(params.git_branch)        
       - name: "GIT_COMMIT"
         value: $(params.git_commit)
-      - name: "GIT_BRANCH"
-        value: $(params.git_branch)
       - name: "PUSHER_NAME"
         value: $(params.pusher_name)
       - name: "PUSHER_EMAIL"
         value: $(params.pusher_email)
+      - name: "PIPELINERUN_NAME"
+        value: $(params.pipelinerun_name)        
       - name: "PIPELINERUN_STATUS"
         value: $(params.pipelinerun_status)
-      - name: "PIPELINERUN_NAME"
-        value: $(params.pipelinerun_name)
       - name: "NAMESPACE"
         value: $(params.namespace)
+      - name: "SEND_TYPE"
+        value: $(params.send_type)        
     envFrom:
       - secretRef:
           name: $(params.slack_secret)   
